--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@headlessui/tailwindcss": "^0.1.3",
+    "@heroicons/react": "^2.0.17",
     "framer-motion": "^10.12.8",
     "react": "^18.2.0",
     "react-aria-components": "^1.0.0-alpha.3",
