--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "framer-motion": "^10.12.8",
     "react": "^18.2.0",
     "react-aria-components": "^1.0.0-alpha.3",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-use-measure": "^2.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
